--- a/beginner/HappyBirthday/app/src/main/res/values/strings.xml
+++ b/beginner/HappyBirthday/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Happy Birthday</string>
+    <string name="happy_birthday_text">Happy Birthday Jordan!</string>
+    <string name="signature_text">From Susan</string>
 </resources>
